--- a/style.css
+++ b/style.css
@@ -10,15 +10,13 @@ body {
 }
 
 #backgroundVideo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+    position: fixed; /* Fix the video to the viewport */
+    top: 0; /* Align to the top of the viewport */
+    left: 0; /* Align to the left of the viewport */
+    width: 100%; /* Set the width to 100% */
+    height: 100%; /* Set the height to 100% */
+    object-fit: cover; /* Cover the entire area while maintaining aspect ratio */
     z-index: -1; /* Place the video behind other elements */
-    transform: translate(-50%, -50%);
 }
 
 .container {
